@@ -1,16 +1,20 @@
 package Ubicacion.Local.controller.v2;
 
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
+import org.springframework.hateoas.MediaTypes;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -18,7 +22,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import Ubicacion.Local.assembler.ColaboradorModelAssembler;
 import Ubicacion.Local.dto.ColaboradorDTO;
-import Ubicacion.Local.dto.LocalDTO;
 import Ubicacion.Local.model.Colaborador;
 import Ubicacion.Local.service.ColaboradorService;
 import jakarta.validation.Valid;
@@ -35,47 +38,56 @@ public class ColaboradorControllerV2 {
     @Autowired
     private ColaboradorModelAssembler assembler;
 
-    @GetMapping
-    public CollectionModel<EntityModel<ColaboradorDTO>> listar(){
+    @PostMapping(produces = MediaTypes.HAL_JSON_VALUE)
+    public ResponseEntity<EntityModel<ColaboradorDTO>> crear(@Valid @RequestBody Colaborador colaborador) {
+        log.info("API REST V2 - PETICIÓN PARA POSTEAR COLABORADORES: '{}'", colaborador.getNombreColaborador());
+        
+        ColaboradorDTO nuevoColaborador = colaboradorService.guardarColaborador(colaborador);
+        
+        return ResponseEntity
+                .created(linkTo(methodOn(ColaboradorControllerV2.class).buscar(nuevoColaborador.getIdColaborador())).toUri())
+                .body(assembler.toModel(nuevoColaborador));
+    }
 
-        log.info("API REST V2 - PETICIÓN PARA LISTAR COLABORADORESS ACTIVOS");
-
-        List<EntityModel<ColaboradorDTO>> colaboradores = colaboradorService.obtenerTodos()
-                .stream()
+    @GetMapping(produces = MediaTypes.HAL_JSON_VALUE)
+    public ResponseEntity<CollectionModel<EntityModel<ColaboradorDTO>>> listar() {
+        log.info("API REST V2 - PETICIÓN PARA LISTAR COLABORADORES");
+        
+        List<EntityModel<ColaboradorDTO>> colaboradores = colaboradorService.obtenerTodos().stream()
                 .map(assembler::toModel)
-                .toList();
-
-        return CollectionModel.of(colaboradores,
-                linkTo(methodOn(ColaboradorControllerV2.class).listar()).withSelfRel());
+                .collect(Collectors.toList());
+        
+        if (colaboradores.isEmpty()) {
+            log.info("LA CONSULTA DE COLABORADORES NO RETORNO REGISTROS ACTIVOS");
+            return ResponseEntity.noContent().build();
+        }
+        
+        return ResponseEntity.ok(CollectionModel.of(
+            colaboradores, linkTo(methodOn(ColaboradorControllerV2.class).listar()).withSelfRel()
+        ));
     }
 
-    @GetMapping("/{id}")
-    public EntityModel<ColaboradorDTO> buscar(@PathVariable Integer id){
-
-        log.info("API REST V2 - PETICIÓN PARA BUSCAR COLABORADOR POR ID: {}", id);
-
+    @GetMapping(value = "/{id}", produces = MediaTypes.HAL_JSON_VALUE)
+    public ResponseEntity<EntityModel<ColaboradorDTO>> buscar(@PathVariable Integer id) {
+        log.info("API REST V2 - PETICIÓN PARA BUSCAR COLABORADOR CON ID: {}", id);
+        
         ColaboradorDTO colaborador = colaboradorService.buscarPorId(id);
-
-        return assembler.toModel(colaborador);
+        return ResponseEntity.ok(assembler.toModel(colaborador));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<EntityModel<ColaboradorDTO>> actualizar(@PathVariable Integer id, @Valid @RequestBody Colaborador colaborador){
-
+    @PutMapping(value = "/{id}", produces = MediaTypes.HAL_JSON_VALUE)
+    public ResponseEntity<EntityModel<ColaboradorDTO>> actualizar(@PathVariable Integer id, @Valid @RequestBody Colaborador colaborador) {
         log.info("API REST V2 - PETICIÓN PARA ACTUALIZAR COLABORADOR CON ID: {}", id);
-
-         ColaboradorDTO actualizado = colaboradorService.actualizarColaborador(id, colaborador);
-
-        return ResponseEntity.ok(assembler.toModel(actualizado));
+        
+        ColaboradorDTO actualizada = colaboradorService.actualizarColaborador(id, colaborador);
+        return ResponseEntity.ok(assembler.toModel(actualizada));
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<String> eliminar(@PathVariable Integer id){
-
-        log.warn("API REST V2 - PETICIÓN PARA DESACIVAR COLABORADOR CON ID: {}", id);
-
+    @DeleteMapping(value = "/{id}", produces = MediaTypes.HAL_JSON_VALUE)
+    public ResponseEntity<Void> eliminar(@PathVariable Integer id) {
+        log.warn("API REST V2 - PETICIÓN PARA ELIMINAR COLABORADOR CON ID: {}", id);
+        
         colaboradorService.eliminarColaborador(id);
-
-        return ResponseEntity.ok("COLABORADOR CON ID " + id + " ELIMINADO CON EXITO!");
+        return ResponseEntity.noContent().build(); 
     }
 }
